--- a/src/app.ipynb
+++ b/src/app.ipynb
@@ -170,7 +170,8 @@
     "\"\"\"\"\"\n",
     "CLIENT_ID=\"AAAAAAAAAAAABBBBBBBBBBBBCCCCCCCCCCCCC111111222222\"\n",
     "CLIENT_SECRET=\"DDDDDDDDDDDDDEEEEEEEEEEEEEEEEFFFFFFFFFFFFFF333333344444\"\n",
-    "\"\"\""
+    "\"\"\"\n",
+    "# Use a .env file to store credential data that will be used later"
    ]
   },
   {
